# 26-5-Control

install/: local_setup.sh  setup.sh
install/can_interface/share/can_interface/: local_setup.sh  package.sh
install/keyboard_control/share/keyboard_control/: package.sh  package.xml
install/motor_control/share/motor_control/: package.dsv  package.ps1  package.sh
install/motor_driver/lib/motor_driver/: ControlMotor
install/motor_driver/share/motor_driver/: local_setup.sh  package.sh
log/: latest_build
src/can_interface/: CMakeLists.txt
src/motor_driver/: CMakeLists.txt  README.md
src/motor_driver/src/: ControlMotor.cpp
